fixed the level-image spacing

--- a/LeapCity2.css
+++ b/LeapCity2.css
@@ -206,6 +206,7 @@ margin-bottom: 40px; /* Some Spacing*/
     width: 950px;
     height: auto;
     border-radius: 10px;
+    margin-top: 30px;
     border: 2px solid white;
     box-shadow: 0 0 10px white;
 }
